[package]
name = "bevy_mod_audio"
version = "0.1.0-rc1"
edition = "2024"

[dependencies]
bevy = "0.15.3"
rodio = "0.20.1"
cpal = { version = "0.15.3" }
flume = "0.11.1"

[target.'cfg(target_arch="wasm32")'.dependencies]
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"